--- a/src/app/pelicula/pelicula.component.html
+++ b/src/app/pelicula/pelicula.component.html
@@ -1,15 +1,14 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="card" style="width: 400px">
-            <img class="card-img-top" src={{movie.image}} alt={{movie.name}}>
+            <img class="card-img-top" src={{movie.poster}} alt={{movie.name}}>
             <div class="card-body">
-                <h2>{{movie.name}}</h2>
-                <h2>{{movie.name}}</h2>
-                <p class="card-text"><b>Species:</b> {{movie.species}}</p>
-                <p class="card-text"><b>Gender:</b> {{movie.gender}}</p>
+                <h2>{{movie.title}}</h2>
+                <p class="card-text"><b>Titulo:</b> {{movie.title}}</p>
+                <p class="card-text"><b>Gender:</b> {{movie.titleOriginal}}</p>
                 <p class="card-text"><b>Status:</b> {{movie.status}}</p>
-                <p class="card-text"><b>Origin:</b> {{movie.origin.name}}</p>
-                <p class="card-text"><b>Last location:</b> {{movie.location.name}}</p>
+                <p class="card-text"><b>Origin:</b> {{movie.releaseDate}}</p>
+                <p class="card-text"><b>Last location:</b> {{movie.overview}}</p>
             </div>
         </div>
     </div>
