--- a/src/app/serie/serie.component.html
+++ b/src/app/serie/serie.component.html
@@ -1,16 +1,16 @@
-<!-- <p>serie works!</p>
+<p>serie works!</p>
 <div class="container">
     <div class="row justify-content-center">
         <div class="card" style="width: 400px">
-            <img class="card-img-top" src={{serie.image}} alt={{serie.name}}>
+            <img class="card-img-top" src={{tv.poster}} alt={{tv.name}}>
             <div class="card-body">
-                <h2>{{serie.name}}</h2>
-                <p class="card-text"><b>Species:</b> {{serie.species}}</p>
-                <p class="card-text"><b>Gender:</b> {{serie.gender}}</p>
-                <p class="card-text"><b>Status:</b> {{serie.status}}</p>
-                <p class="card-text"><b>Origin:</b> {{serie.origin.name}}</p>
-                <p class="card-text"><b>Last location:</b> {{serie.location.name}}</p>
+                <h2>{{tv.title}}</h2>
+                <p class="card-text"><b>Titulo:</b> {{tv.title}}</p>
+                <p class="card-text"><b>Gender:</b> {{tv.titleOriginal}}</p>
+                <p class="card-text"><b>Status:</b> {{tv.status}}</p>
+                <p class="card-text"><b>Origin:</b> {{tv.releaseDate}}</p>
+                <p class="card-text"><b>Last location:</b> {{tv.overview}}</p>
             </div>
         </div>
     </div>
-</div> -->
+</div>
